[gd_scene load_steps=6 format=3 uid="uid://c3pxdomjgcl5p"]

[ext_resource type="Theme" uid="uid://xfu2p73erfer" path="res://ui/new_theme.tres" id="1_33t18"]
[ext_resource type="Script" path="res://ui/draft.gd" id="1_l183w"]
[ext_resource type="Texture2D" uid="uid://bp227afmrogtr" path="res://assets/fire.png" id="3_v1sxp"]

[sub_resource type="Gradient" id="Gradient_olfpw"]
colors = PackedColorArray(0.0392157, 0.0666667, 0.113725, 1, 0.34902, 0.572549, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bvwsl"]
gradient = SubResource("Gradient_olfpw")
fill_from = Vector2(0.415929, 1)

[node name="Draft" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_l183w")

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_bvwsl")
ignore_texture_size = true
metadata/_edit_layout_mode = 1

[node name="SwitchButton" type="CheckButton" parent="."]
offset_right = 44.0
offset_bottom = 24.0
text = "Spells"

[node name="CreatureSelector" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
metadata/_edit_layout_mode = 1

[node name="CreaturesGrid" type="GridContainer" parent="CreatureSelector"]
columns = 5

[node name="ContainerOpponent" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_right = -40.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_33t18")
metadata/_edit_layout_mode = 1

[node name="Creatures" type="VBoxContainer" parent="ContainerOpponent"]
offset_left = 4.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_33t18")
metadata/_edit_layout_mode = 1

[node name="ContainerPlayer" type="PanelContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -2.0
offset_right = 44.0
offset_bottom = 2.0
grow_vertical = 2
theme = ExtResource("1_33t18")
metadata/_edit_layout_mode = 1

[node name="Creatures" type="VBoxContainer" parent="ContainerPlayer"]
offset_left = 4.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = 4.0
grow_vertical = 2
theme_override_constants/separation = 10
metadata/_edit_layout_mode = 1

[node name="SpellSelector" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SpellSelector"]
offset_right = 500.0
offset_bottom = 500.0

[node name="Loadouts" type="HBoxContainer" parent="SpellSelector/VBoxContainer"]
offset_right = 500.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="SpellSelector/VBoxContainer/Loadouts"]
offset_right = 55.0
offset_bottom = 31.0
text = "Melee"

[node name="Button2" type="Button" parent="SpellSelector/VBoxContainer/Loadouts"]
offset_left = 59.0
offset_right = 125.0
offset_bottom = 31.0
text = "Ranged"

[node name="HBoxContainer" type="HBoxContainer" parent="SpellSelector/VBoxContainer"]
offset_top = 35.0
offset_right = 500.0
offset_bottom = 58.0

[node name="LearnedSpells" type="VBoxContainer" parent="SpellSelector/VBoxContainer/HBoxContainer"]
offset_right = 30.0
offset_bottom = 23.0

[node name="PanelContainer" type="PanelContainer" parent="SpellSelector/VBoxContainer/HBoxContainer/LearnedSpells"]
offset_right = 30.0
offset_bottom = 23.0

[node name="Label" type="Label" parent="SpellSelector/VBoxContainer/HBoxContainer/LearnedSpells/PanelContainer"]
offset_right = 30.0
offset_bottom = 23.0

[node name="TextureRect" type="TextureRect" parent="SpellSelector/VBoxContainer/HBoxContainer/LearnedSpells/PanelContainer"]
custom_minimum_size = Vector2(30, 0)
offset_right = 30.0
offset_bottom = 23.0
texture = ExtResource("3_v1sxp")
ignore_texture_size = true

[node name="ScrollContainer" type="ScrollContainer" parent="SpellSelector/VBoxContainer/HBoxContainer"]
offset_left = 34.0
offset_right = 34.0
offset_bottom = 23.0

[node name="Spells" type="VBoxContainer" parent="SpellSelector/VBoxContainer/HBoxContainer/ScrollContainer"]
offset_right = 30.0
offset_bottom = 23.0

[node name="PanelContainer" type="PanelContainer" parent="SpellSelector/VBoxContainer/HBoxContainer/ScrollContainer/Spells"]
offset_right = 30.0
offset_bottom = 23.0

[node name="Label" type="Label" parent="SpellSelector/VBoxContainer/HBoxContainer/ScrollContainer/Spells/PanelContainer"]
offset_right = 30.0
offset_bottom = 23.0

[node name="TextureRect" type="TextureRect" parent="SpellSelector/VBoxContainer/HBoxContainer/ScrollContainer/Spells/PanelContainer"]
custom_minimum_size = Vector2(30, 0)
offset_right = 30.0
offset_bottom = 23.0
texture = ExtResource("3_v1sxp")
ignore_texture_size = true

[connection signal="toggled" from="SwitchButton" to="." method="_on_switch_button_toggled"]
